Don't use deprecated Class.newInstance.
Change-Id: I3d5cbe3d0b8ad9cde58d78ba62c4becf344c7a7f
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>